Prevent text on navbar from spilling over 1 line

--- a/src/pages/Website/Header.css
+++ b/src/pages/Website/Header.css
@@ -1,6 +1,6 @@
 .navbar {
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-  height: 80px;
+  /* height: 80px; */
   display: flex;
   justify-content: center;
   align-items: center;
